# How-to-setup-Emscripten

./: CMakeLists.txt  README.md  index.html
extras/xtensor-blas/: xblas_config_cling.hpp
fullmetal/: main.cpp  math_operations.hpp  utils.cpp
includes/xtensor/: xadapt.hpp  xarray.hpp  xassign.hpp  xaxis_iterator.hpp  xbroadcast.hpp  xbuffer_adaptor.hpp  xbuilder.hpp  xcomplex.hpp  xcontainer.hpp  xdynamic_view.hpp  xexpression.hpp  xexpression_holder.hpp  xfunction.hpp  xfunctor_view.hpp  xgenerator.hpp  xiterator.hpp  xmasked_view.hpp  xmath.hpp  xnorm.hpp  xnpy.hpp  xoffset_view.hpp  xoperation.hpp  xoptional.hpp  xoptional_assembly_storage.hpp  xreducer.hpp  xscalar.hpp  xslice.hpp  xstrided_view.hpp  xstrided_view_base.hpp  xstrides.hpp  xtensor_forward.hpp  xutils.hpp  xview.hpp
includes/xtl/: xany.hpp
src/: Tensor.cpp  Tensor.hpp  main.cpp  testem.hpp
